// Protocol buffers definition for Approov Shapes App Demo (using GRPC)
//
// MIT License
//
// Copyright (c) 2016-present, Critical Blue Ltd.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
// documentation files (the "Software"), to deal in the Software without restriction, including without limitation the
// rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
// permit persons to whom the Software is furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in all copies or substantial portions of the
// Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
// WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
// COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
// OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.approov.shapes";
option java_outer_classname = "ShapesProto";
option objc_class_prefix = "SHAPP";

package shapes;

// The greeting service definition.
service Shape {
    // Sends a hello, requesting a "hello" response.
    rpc Hello (HelloRequest) returns (HelloReply) {}
    // Sends a shape request where the GRPC server requires an API key
    rpc Shape (ShapeRequest) returns (ShapeReply) {}
    // Sends a shape request, where the GRPC server requires an Approov token in addition to the API key
    rpc ApproovShape (ApproovShapeRequest) returns (ShapeReply) {}
}

// The hello request message
message HelloRequest {
  string dummy = 1;
}

// The hello response message containing the "hello".
message HelloReply {
  string message = 1;
}

// The shape request message
message ShapeRequest {
  string dummy = 1;
}

// The shape response message containing the name of the shape.
message ShapeReply {
  string message = 1;
}

// The Approov shape request message where the server will check for a valid Approov token in the request's headers
// before returning a result
message ApproovShapeRequest {
  string dummy = 1;
}

